--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,31 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+.pnp/
+.pnp.js
+
+# Production build
+dist/
+build/
+public/dist/
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# OS files
-.DS_Store
-Thumbs.db
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE specific files
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log* 
+# OS
+.DS_Store
+Thumbs.db 
