--- a/package.json
+++ b/package.json
@@ -1,23 +1,56 @@
 {
-  "name": "cursortest",
+  "name": "api-test-interface",
   "version": "1.0.0",
-  "description": "Node.js backend with Supabase integration",
-  "main": "src/index.js",
+  "description": "API test interface with Supabase authentication",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "predev": "kill-port 3000 3001",
+    "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:client": "webpack serve --mode development",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "build": "tsc && webpack --mode production",
+    "clean": "rimraf dist",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "format": "prettier --write \"src/**/*.{ts,js,css,html}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@types/cors": "^2.8.0",
+    "@types/express": "^4.17.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "concurrently": "^8.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.0.0",
+    "css-minimizer-webpack-plugin": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "kill-port": "^2.0.1",
+    "mini-css-extract-plugin": "^2.0.0",
+    "nodemon": "^3.0.0",
+    "postcss": "^8.0.0",
+    "postcss-loader": "^7.0.0",
+    "prettier": "^2.0.0",
+    "rimraf": "^5.0.0",
+    "terser-webpack-plugin": "^5.0.0",
+    "ts-loader": "^9.0.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^5.2.0"
   }
 }
