--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:client": "webpack serve --mode development",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build": "tsc && webpack --mode production",
-    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "npm run build:server && npm run build:client",
+    "build:server": "tsc",
+    "build:client": "webpack --mode production",
+    "clean": "rimraf dist public/dist",
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
     "format": "prettier --write \"src/**/*.{ts,js,css,html}\""
@@ -22,7 +25,8 @@
     "@supabase/supabase-js": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.0",
@@ -48,7 +52,6 @@
     "ts-loader": "^9.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^5.2.0"
