--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
       "*": ["node_modules/*"]
     },
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "lib": ["ES2020", "DOM"]
+    "lib": ["ES2020"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "public"]
+  "exclude": ["src/client/**/*", "node_modules", "dist", "public"]
 }
