--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "prebuild": "npm run clean",
     "build": "npm run build:server && npm run build:client",
-    "build:server": "tsc",
-    "build:client": "webpack --mode production",
+    "build:server": "tsc --project tsconfig.json --verbose",
+    "build:client": "webpack --mode production --config webpack.config.js",
+    "postbuild": "ls -la dist && echo 'Build completed'",
     "clean": "rimraf dist public/dist",
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
@@ -26,7 +27,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "rimraf": "^5.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0",
+    "ts-loader": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.0",
@@ -47,13 +52,9 @@
     "postcss": "^8.0.0",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.0.0",
-    "rimraf": "^5.0.0",
     "terser-webpack-plugin": "^5.0.0",
-    "ts-loader": "^9.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^5.2.0"
   }
 }
