Fix file paths and add debug scripts for Render deployment

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "api-test-interface",
   "version": "1.0.0",
   "description": "API test interface with Supabase authentication",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
+    "prestart": "pwd && ls -la",
     "predev": "kill-port 3000 3001",
     "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:client": "webpack serve --mode development",
@@ -13,7 +14,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc --project tsconfig.json --verbose",
     "build:client": "webpack --mode production --config webpack.config.js",
-    "postbuild": "ls -la dist && echo 'Build completed'",
+    "postbuild": "pwd && ls -la && echo '=== dist directory ===' && ls -la dist && echo 'Build completed'",
     "clean": "rimraf dist public/dist",
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
