--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API test interface with Supabase authentication",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "prestart": "pwd && ls -la",
+    "start": "cd .. && node src/dist/index.js",
+    "prestart": "pwd && ls -la && echo '=== parent directory ===' && ls -la .. && echo '=== dist directory ===' && ls -la dist",
     "predev": "kill-port 3000 3001",
     "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:client": "webpack serve --mode development",
@@ -14,7 +14,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc --project tsconfig.json --verbose",
     "build:client": "webpack --mode production --config webpack.config.js",
-    "postbuild": "pwd && ls -la && echo '=== dist directory ===' && ls -la dist && echo 'Build completed'",
+    "postbuild": "pwd && ls -la && echo '=== dist directory ===' && ls -la dist && echo '=== parent directory ===' && ls -la .. && echo 'Build completed'",
     "clean": "rimraf dist public/dist",
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
