--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "prebuild": "npm run clean",
     "build": "npm run build:server && npm run build:client",
-    "build:server": "tsc --project tsconfig.json --verbose",
+    "build:server": "tsc --project tsconfig.json",
     "build:client": "webpack --mode production --config webpack.config.js",
     "postbuild": "pwd && ls -la && echo '=== dist directory ===' && ls -la dist && echo '=== parent directory ===' && ls -la .. && echo 'Build completed'",
     "clean": "rimraf dist public/dist",
