--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API test interface with Supabase authentication",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "cd .. && node src/dist/index.js",
+    "start": "node dist/index.js",
     "prestart": "pwd && ls -la && echo '=== parent directory ===' && ls -la .. && echo '=== dist directory ===' && ls -la dist",
     "predev": "kill-port 3000 3001",
     "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
@@ -28,15 +28,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "typescript": "^5.0.0",
     "rimraf": "^5.0.0",
+    "ts-loader": "^9.0.0",
+    "typescript": "^5.0.0",
     "webpack": "^5.0.0",
-    "webpack-cli": "^5.0.0",
-    "ts-loader": "^9.0.0"
+    "webpack-cli": "^5.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.0",
-    "@types/express": "^4.17.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
